@@ -73,6 +73,13 @@ LongDataAlias::TypeDescription<IntData> LongDataAlias::m_typeDescription( LongDa
 			container->read( "value", p, N ); \
 		} \
 	}
+
+#define IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( TNAME ) \
+	template<> \
+	TNAME::TypedData() \
+		:	m_data( ValueType( 0 ) ) \
+	{ \
+	}
 	
 IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( BoolData, BoolDataTypeId )
 IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( FloatData, FloatDataTypeId )
@@ -86,7 +93,6 @@ IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( ShortData, ShortDataTypeId )
 IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( UShortData, UShortDataTypeId )
 IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( Int64Data, Int64DataTypeId )
 IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( UInt64Data, UInt64DataTypeId )
-
 IECORE_RUNTIMETYPED_DEFINETEMPLATESPECIALISATION( StringData, StringDataTypeId )
 
 IE_CORE_DEFINEIMATHTYPEDDATASPECIALISATION( V2iData, V2iDataTypeId, 2 )
@@ -113,6 +119,17 @@ IE_CORE_DEFINEIMATHTYPEDDATASPECIALISATION( QuatfData, QuatfDataTypeId, 4 )
 IE_CORE_DEFINEIMATHTYPEDDATASPECIALISATION( QuatdData, QuatdDataTypeId, 4 )
 IE_CORE_DEFINEIMATHTYPEDDATASPECIALISATION( LineSegment3fData, LineSegment3fDataTypeId, 6 )
 IE_CORE_DEFINEIMATHTYPEDDATASPECIALISATION( LineSegment3dData, LineSegment3dDataTypeId, 6 )
+
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( V2iData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( V3iData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( V2fData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( V3fData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( V2dData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( V3dData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( Color3fData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( Color4fData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( Color3dData )
+IECORE_DEFINE_ZERO_INITIALISED_CONSTRUCTOR( Color4dData )
 
 template<>
 void StringData::memoryUsage( Object::MemoryAccumulator &accumulator ) const
